# talk2n8n

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ci.md  design.md  main.py  mypy.ini  pyproject.toml  quality_check.sh  requirements.txt  setup.sh  ui-design.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  publish-to-pypi.yml
agent/: agent.py  llm_client.py
assets/: demo.mov
config/: langgraph_tool_schema.yaml  n8n-workflow.json
docs/: N8N_WORKFLOW_DESIGN.md  design.md
docs/reference/: agent.md
examples/: README.md  chat.py  simple.py  test_interactive.py
n8n/: client.py  tool_registry.py  workflow_analyzer.py  workflow_converter.py
slack/: handler.py
src/: __init__.py  config.py
src/agent/: agent.py
src/config/: __init__.py  langgraph_tool_schema.yaml  logging_config.py  sample_workflow.md  settings.py
src/n8n/: __init__.py  client.py  tool_factory.py  tool_service.py
src/slack/: handler.py
src/talk2n8n/: _version.py  cli.py
src/talk2n8n/agent/: agent.py
src/talk2n8n/config/: logging_config.py  n8n-workflow.json  settings.py
src/talk2n8n/n8n/: client.py  tool_factory.py  tool_service.py
src/talk2n8n/slack/: handler.py
tests/: test_agent.py  test_config.py  test_interactive.py  test_tool_registry.py
